<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="#eeeeee">

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_header"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textColor="#f50057" />
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_profile"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtProfile"
        android:layout_marginBottom="40dp"/>
    <TextView
    android:id="@+id/txtDipit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dipit"
    android:textSize="22sp"
    android:fontFamily="sans-serif-condensed-medium"
    android:textStyle="bold"
    android:layout_below="@+id/imgProfile"
    android:padding="6dp"
    android:layout_centerHorizontal="true"
    android:textColor="#f50057"/>
    <TextView
        android:id="@+id/txtEmailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_header"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold"
        android:layout_below="@+id/txtDipit"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:textColor="#f50057"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtEmailHeader"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/txtPhoneHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textStyle="bold"
        android:layout_below="@+id/txtEmail"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:textColor="#f50057"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPhoneHeader"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp" />
    <ImageView
        android:id="@+id/imgTwitter"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/twitter"
        android:layout_below="@id/txtPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dipitvasdev"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgTwitter"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>