<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppFragment"
    android:background="#eeeeee">

    <TextView
        android:id="@+id/txtAboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_header"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:textColor="#f50057"/>
    <TextView
        android:layout_marginTop="30dp"
        android:padding="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/about_desp"
        android:textSize="20sp"
        android:layout_below="@id/txtAboutApp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dipit"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

</RelativeLayout>